# miniprog_eigsolv

./: .gitignore  CMakeLists.txt  README.md
benchmarks/computecanada-cedar/: README.md  mpistats_vs_gridshape.ipynb  setenv-gcc-sca-oblas-o2-native.sh  setenv-gcc-sca-oblas-o2.sh  setenv-gcc.sh  setenv-intel.sh  time_vs_gridshape.ipynb
benchmarks/computecanada-cedar/gcc-ompi-sca-fblas/: setenv.sh
benchmarks/computecanada-cedar/intel-aps/: setenv.sh
benchmarks/computecanada-cedar/intel-threaded/: setenv.sh
benchmarks/computecanada-niagara/: README.md  setenv-intel.sh
cmake/: cedar.gcc.ompi.netlibsca.fblas.config.cmake  cedar.gcc.ompi.sca.oblas.config.cmake  gnu.config.cmake  intel.config.cmake  intel.threaded.config.cmake  niagara.intel.sequential.config.cmake  niagara.intel.threaded.config.cmake
data/: eigenvalues_1040.h5
drivers/: CMakeLists.txt  pydriver_mpistats_scalapack_pdsyev.py  pydriver_time_blas_ddot.py  pydriver_time_scalapack_pdgemm.py  pydriver_time_scalapack_pdgemm_read_data_in.py  pydriver_time_scalapack_pdsyev.py
drivers-blas/: Makefile  driver_daxpy.cpp  driver_ddot.cpp  driver_dgemv.cpp
drivers-cuda/: Makefile  device_get_info.cu  driver_hello_cuda.cu  driver_matrix_add.cu  driver_vector_add.cu  perf-matrix-add.sh  plot-timing.py  timing.txt
drivers-matrix/: Makefile  driver_matrix.cpp  driver_matrix_p.cpp  driver_vector.cpp  driver_vector_p.cpp
drivers/scalapack/: CMakeLists.txt
drivers/scalapack/pdgemm/: CMakeLists.txt  README.md  blocks_per_process_vs_time.py  blocksize_vs_time.py  time_vs_blocksize.py  time_vs_numblocksperprocess.py
drivers/scalapack/pdsyev/: CMakeLists.txt  mpistats_vs_gridshape.py  mpistats_vs_gridshape_gen_aps_report.py  time_vs_blocksize.py  time_vs_gridshape.py
prototypes/pybind11-demos/: compile-intel.sh  compile.sh
prototypes/pybind11-demos/hello-array/: Makefile  array.cpp  array.hpp  hello-array.py  pb11_module_array.cpp
prototypes/pybind11-demos/hello-blacs/: Makefile  hello_blacs_kernels.cpp  hello_blacs_kernels.hpp  pb11_module_hello_blacs.cpp  pydriver-hello-blacs.py
prototypes/pybind11-demos/hello-mpi/: Makefile  mpi_hello.cpp  mpi_hello.hpp  mpi_hello.py  pb11_module_mpi.cpp
prototypes/pybind11-demos/hello-pb11/: hello.cpp  hello.hpp  hello.py  pybind11_hello.cpp
prototypes/pybind11-demos/hello-scalapack/: Makefile  array_helper.hpp  blacs_.h  driver_time_scalapack_pdgemm.cpp  pb11_module_time_scalapack_kernels.cpp  pb11_time_scalapack_kernels.cpp  pb11_time_scalapack_kernels.hpp  pydriver_time_scalapack.py  time_scalapack_kernels.cpp  time_scalapack_kernels.hpp  timer.hpp
prototypes/scalapack-bak/: Makefile  Makefile.gnu  blacs.h  blacs_distarry.cpp  blacs_distmat.cpp  blacs_init_procgrid.cpp  blacs_utils.cpp  blacs_utils.hpp  compile-intel.sh  scalapack_dgemm.cpp  test_blacs_cls.cpp  test_blacs_distarray.cpp
src/: CMakeLists.txt
src/cpp/dscalapack/: dscalapack_helloworld.cpp  mpi_helloworld.cpp
src/fortran/: CMakeLists.txt
src/fortran/dscalapack/: dscalapack_helloworld.f90
src/interfaces/: CMakeLists.txt  blacs.h  blas.h
src/kernels/: CMakeLists.txt  compile.sh  pybind11_time_blas_kernels.cpp  pybind11_time_blas_kernels.hpp  pybind11_time_kernels.cpp  pybind11_time_kernels.hpp  time_blas_kernels.cpp  time_kernels.hpp  time_scalapack_kernels.cpp
src/kernels/blas/: CMakeLists.txt  pb11_module_time_blas_kernels.cpp  pb11_time_blas_kernels.cpp  pb11_time_blas_kernels.hpp  time_blas_kernels.cpp  time_blas_kernels.hpp
src/kernels/scalapack/: CMakeLists.txt  Makefile  blacs.h  blacs_init_desc.cpp  blacs_init_procgrid.cpp  blacs_utils.cpp  blacs_utils.hpp  hello_blacs.cpp  mpistats_scalapack_kernels.cpp  mpistats_scalapack_kernels.hpp  pb11_module_mpistats_scalapack_kernels.cpp  pb11_module_time_scalapack_kernels.cpp  pb11_mpistats_scalapack_kernels.cpp  pb11_mpistats_scalapack_kernels.hpp  pb11_time_scalapack_kernels.cpp  pb11_time_scalapack_kernels.hpp  pybind11_time_scalapack_kernels.cpp  test_blacs_hello.cpp  test_blacs_utils.cpp  time_scalapack_kernels.cpp  time_scalapack_kernels.hpp
src/utils/: CMakeLists.txt  array_helper.cpp  timer.cpp
src2/: Makefile  blas.h  d_dcopy.cpp  d_dcopy.x  d_ddot.cpp  d_ddot.x  d_dgemv.cpp  d_dgemv.x  d_dscal.cpp  d_dscal.x  matrix.cpp  matrix.x  parameters.h
tests/: CMakeLists.txt  bench_pybind11_time_cblas_ddot.py  bench_time_blas_ddot.sh  bench_time_cblas_ddot.sh  driver_time_blas_ddot.cpp  driver_time_cblas_ddot.cpp  driver_time_scalapack_pdgemm.cpp  pydriver_time_cblas_ddot.py
tmp-kernels/hpc/gpu/: timer.hpp
tmp-kernels/hpc/gpu/hello-cuda/: Makefile  hello  hello.cu
tmp-kernels/hpc/gpu/vector-dot/: main.cu
tmp-kernels/hpc/gpu/vector-sum/: Makefile  hello.cu  main.cu
tmp-kernels/hpc/gpu/vectorAdd/: Makefile  a.out  plot_timing.py  plot_timing.sh  timer.cpp  timer.h  vectorAdd.cpp  vectorAdd.cu
tmp-kernels/hpc/hpc-analysis/cloverleaf/: build_cloverleaf_mpi.sh  build_cloverleaf_serial.sh
tmp-kernels/hpc/hpc-analysis/cloverleaf/test-runs/: aps_report_20230208_113142.html  aps_report_20230208_113149.html  clover.in  clover.in.tmp  clover.out
tmp-kernels/hpc/kernels/copy_array/: ca_cuda.cu  cpp.mk
tmp-kernels/hpc/kernels/sum_of_array/: cuda.mk  soa_cuda.cu  soa_explicit.cpp
tmp-kernels/hpc/multithreading/: Makefile  hello_opm.cpp  hello_thread.cpp  hello_thread.cpp.bak  vector_sum_omp.cpp  vector_sum_thread.cpp
tmp-kernels/hpc/multithreading/vector-dot/: Makefile  main.cpp
tmp-kernels/hpc/multithreading/vector-sum/: main.cpp
tmp-kernels/hpc/parallel-and-hpc/cache-miss/: Makefile  kernel  kernel.cpp  run-measurement.sh  timer.cpp  timer.h
tmp-kernels/hpc/parallel-and-hpc/data-structure/: a.out  aos.c  malloc2D-driver.c  malloc2D.c  malloc2D.h  malloc2D.h.gch
tmp-kernels/hpc/parallel-and-hpc/memory-bandwidth/: a.out  import numpy as np.py  memory-bandwidth.cpp  plot-mem.py
utils-blas/: blas.h
utils-matrix/: matrix.hpp  matrix_base.hpp  matrix_p.hpp  matrix_v.hpp  matrix_with_vector.hpp  vector_p.hpp  vector_v.hpp  vector_with_vector.hpp
utils-timing/: timer.hpp
(+53 files in other folders)
